--- a/client/src/components/LeftSidebar/leftSidebar.css
+++ b/client/src/components/LeftSidebar/leftSidebar.css
@@ -1,5 +1,28 @@
+
 .leftsidebar {
-    width: 50px;
-    height: 50px;
-    background-color: black;
+    height: 100%;
+    width: 160px;
+    position: absolute;
+    top: 62px;;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.leftsidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #818181;
+    display: block;
+}
+
+.leftsidebar a:hover {
+    color: #f1f1f1;
+}
+
+@media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
 }
