--- a/client/src/components/searchBar/searchBar.css
+++ b/client/src/components/searchBar/searchBar.css
@@ -1,7 +1,10 @@
 .searchbar {
-    color: green;
-    width: 50px;
+    color: white;
+    position: absolute;
+    top: 112px;;
+    left: 0;
+    width: 180px;
     height: 50px;
-    background-color: blue; 
+    background-color: #4b7690; 
     float: right;
 }
