--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -1,10 +1,10 @@
-.searchbar {
-    color: white;
+.sidebar {
+    /* color: white;
     position: absolute;
     top: 112px;;
     left: 0;
     width: 180px;
     height: 50px;
-    background-color: #4b7690; 
-    float: right;
+    background-color: #4b7690;
+    float: right; */
 }
