--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,3 +1,14 @@
 .nav-custom {
-    color: black;
+    color: blue;
+    border-color: #FF0000;
+}
+
+.navbar-inverse {
+    background-color: #00498B;
+    border-color: #000000;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+    color: #ffffff;
+    background-color: #000B2A;
 }
