changed bootstrap theme to flatly in index.html; minor changes to nav bar - no pink; minor change to login/regist to reflect color changes to nav bar

--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -4,6 +4,7 @@
     height: auto;
     margin: auto;
     padding: 3%;
+    border-radius: 5px;
     background: linear-gradient(to bottom,#7EADCF 0%, #F5F5F5 100%);
     box-shadow: 0 5px 8px 0 rgba(0,0,0, 0.2), 0 7px 20px 0 rgba(0,0,0, 0.17);
 }
@@ -26,8 +27,16 @@ h3 {
     color: #101648;
 }
 
+h4 {
+    color: #101648;
+}
+
 .pop {
-    color: #ee433f;
+    color:#18a279;
+}
+
+.pop-white {
+    color: #ffffff;
 }
 
 .modal-box {
@@ -36,6 +45,7 @@ h3 {
    padding: 5%;
    height: 80%;
    width: 80%;
+   
     background: linear-gradient(to bottom,#7EADCF 0%, #F5F5F5 100%);
     box-shadow: 0 5px 8px 0 rgba(0,0,0, 0.2), 0 7px 20px 0 rgba(0,0,0, 0.17);
 }
