--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,22 +1,27 @@
-.nav-custom {
-    color: blue;
-    border-color: #FF0000;
-}
-
 .navbar-inverse {
-    background-color: #00498B;
-    border-color: #000000;
-}
-
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
-    color: #ffffff;
-    background-color: #000B2A;
-}
-
-.navbar-brand {
-    float: left;
-    padding: 5px 15px;
-    font-size: 19px;
-    line-height: 21px;
-    height: 60px;
-}
+    background-color: #101648;
+    border:0;
+    box-sizing: border-box;
+  }
+  
+  .navbar-inverse .navbar-nav > li > a:hover {
+    background-color: #6F7391;
+    color: #27dfa9;
+    }
+  
+    .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: #6F7391;
+    color:#27dfa9;
+    }
+    .navbar-inverse .navbar-nav > li > a:active {
+    background-color: #6F7391;
+    color: white;
+    }
+  
+  .navbar-brand {
+      float: left;
+      padding: 5px 25px 5px 15px;
+      font-size: 19px;
+      line-height: 21px;
+      height: 60px;
+  }
