--- a/client/src/pages/Kits/Kits.css
+++ b/client/src/pages/Kits/Kits.css
@@ -1,4 +1,8 @@
-.card-list
+.card-list-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+}
 
 .kit-card {
     border: 1px solid #cfcfcf;
