--- a/client/src/components/KitCard/KitCard.css
+++ b/client/src/components/KitCard/KitCard.css
@@ -1,14 +1,25 @@
-.kit-card {
-    display: inline-block;
-    margin: 25px;
-    padding: 25px;
-    width: 300px;
 
-    -webkit-box-shadow: 0px 7px 14px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow: 0px 7px 14px 0px rgba(50, 50, 50, 0.75);
-    box-shadow: 0px 7px 14px 0px rgba(50, 50, 50, 0.75);
+
+.kit-card {
+    border: 1px solid #cfcfcf;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-table;
+    margin: 8px;
+    overflow: hidden;
+    width: 288px;
+    color: #7e8196;
+    background-color: rgb(247, 245, 245); 
+    box-shadow: 0 5px 8px 0 rgba(0,0,0, 0.2), 0 7px 20px 0 rgba(0,0,0, 0.17);
 }
 
-.kit-card img {
-    width: 100%;
+.kit-image-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width: 300px;
+    max-height: 173px;
 }
