updated styling for Kits page, KitCard comp, List; updated styling for KitDetail page. Not complete.

--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -6,9 +6,8 @@
   overflow-x: hidden;
 }
 
-.list-overflow-container {
-  
-  /* border: 1px #DDDDDD solid; */
+.listcard-overflow-container {
+  /* display: flex; */
   border-radius: 4px;
   overflow: none;
 }
