--- a/client/src/components/KitCard/KitCard.css
+++ b/client/src/components/KitCard/KitCard.css
@@ -1,5 +1,5 @@
 
-
+/* card dimensions 290x380 */
 .kit-card {
     border: 1px solid #cfcfcf;
     border-radius: 4px;
@@ -7,19 +7,10 @@
     display: inline-table;
     margin: 8px;
     overflow: hidden;
-    width: 288px;
+    height: 370px;
+    width: 290px;
     color: #7e8196;
     background-color: rgb(247, 245, 245); 
     box-shadow: 0 5px 8px 0 rgba(0,0,0, 0.2), 0 7px 20px 0 rgba(0,0,0, 0.17);
 }
 
-.kit-image-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    max-width: 300px;
-    max-height: 173px;
-}
