--- a/client/src/pages/Kits/Kits.css
+++ b/client/src/pages/Kits/Kits.css
@@ -1,44 +1,31 @@
-.main-center {
+/* .main-center {
     margin: auto;
     width: 90%;
     padding: 20px;
     background-color: #7e8196;
     border-radius: 5px;
     
-}
+} */
 .card-list-container {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    justify-content: center;
+
 }
 
-/* card dimensions 290x380 */
-.kit-card {
-    border: 1px solid #cfcfcf;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 8px;
-    text-overflow: ellipsis;
-    height: 370px;
-    width: 290px;
-    color: #7e8196;
-    background-color: rgb(247, 245, 245); 
-    box-shadow: 0 5px 8px 0 rgba(0,0,0, 0.2), 0 7px 20px 0 rgba(0,0,0, 0.17);
-}
+
+
+
 
 /* card image dimensions 290x210 */
 .kit-image-container {
     background-color:  rgb(247, 245, 245); 
-    padding-bottom: 16px;
     margin: 0;
-    height: 200px;
+    height: 180px;
     vertical-align: top;
     position: relative;
 }
 
 .kit-image-container .img {
-    
     position: absolute;
     top: 0;
     bottom: 0;
@@ -47,21 +34,22 @@
     margin: auto;
     max-width: 100%;
     max-height: 100%;
+    transition: opacity 1s; 
+    opacity: 1;
 }
 
 .kit-title {
-    padding: 0 4% 0 4%;
+    padding: 0 1% 0 4%;
     color: #373737;
     font-size: 22px;
     font-weight: bold;
     height: 40px;
-    line-height: 40px;
+    /* line-height: 40px; */
     opacity: 1;  
     text-align: left;
     vertical-align: bottom;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 286px;
     white-space: nowrap;
 }
 
@@ -76,5 +64,7 @@ small {
     text-overflow: ellipsis;
 }
 
-
+#pop-blue {
+    color: #7EADCF;
+}
 
