--- a/client/src/pages/KitDetail/KitDetail.css
+++ b/client/src/pages/KitDetail/KitDetail.css
@@ -24,7 +24,9 @@
 .details-image-container {
     display: flex;
     margin: 10px 10px 25px 10px;
-    height: 180px;
+    width: 98%;
+    overflow-y: hidden;
+    max-height: 500px;
     justify-content: center;
     text-align: center;
     /* border-top: 1px solid #cfcfcf;
