--- a/client/src/components/KitCard/KitCard.css
+++ b/client/src/components/KitCard/KitCard.css
@@ -35,12 +35,10 @@
     padding-top: 5px;
     background: rgb(255,255,255);
     background: #2d3e4f;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #47607a, #324658);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #465f7a, #384e64); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 50px;
     width: 250px;
     font-size: 22px;
     font-weight: bold;
-    height: 50px;
     opacity: 1;  
     text-align: center;
     vertical-align: top;
@@ -52,12 +50,18 @@
 }
 
 .kit-title-style {
+    background-image: url("circuitbackground.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
     text-shadow: 2px 2px 2px rgb(63, 63, 63);
     padding: 4px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     text-align: center;
+    box-shadow: inset 0 3px 3px #323b3b;
 }
 
 .kit-image-div {
