a dash of artwork

--- a/client/src/pages/Inventory/Inventory.css
+++ b/client/src/pages/Inventory/Inventory.css
@@ -1,5 +1,15 @@
 #inventoryTable {
-
   background: white;
+}
 
+.table-responsive {
+  box-shadow: 0 3px 5px 0 rgba(0,0,0, 0.2), 0 5px 15px 0 rgba(0,0,0, 0.15);
+}
+
+.microchip {
+  width: 50px;
+}
+
+.table-title {
+  margin: 10px;
 }
